# GameOfLife

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh
.github/workflows/: ci.yml  doxygen.yml  release.yml
benchmark/: BenchMark.cpp  BenchMark.h  CMakeLists.txt  main.cpp
samples/: acorn.txt  beacon.txt  beehive.txt  glider-gun.txt  glider.txt  initial_random100x100.txt  pulsar.txt  random.txt
src/app/: GameController.cpp  GameController.h  app.cmake  main.cpp
src/core/: BBox.cpp  BBox.h  Exceptions.h  GameOfLife.cpp  GameOfLife.h  Point.h  core.cmake
src/io/: BoardGenerator.cpp  BoardGenerator.h  BoardSerializer.cpp  BoardSerializer.h  io.cmake
src/render/: RenderConsole.cpp  RenderConsole.h  RenderInterface.h  render.cmake
tests/: CMakeLists.txt  test_bbox.cpp  test_game.cpp  test_generator.cpp  test_serializer.cpp
tools/: CMakeLists.txt  generate_board.cpp  main.cpp
